--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
     <div class="main-container">
 
-        <!-- ===== ВОССТАНОВЛЕННАЯ ШАПКА С БАННЕРОМ ===== -->
+        <!-- ===== НОВАЯ ШАПКА С БАННЕРОМ И АВАТАРОМ ===== -->
         <header class="profile-header">
             <div class="banner">
                 <!-- Фоновое изображение для баннера задается в CSS -->
             </div>
-            <!-- Ваш аватар, который будет "висеть" поверх баннера -->
+            <!-- Аватар, который "висит" поверх баннера -->
             <img src="avatar.jpg" alt="Аватар" class="profile-avatar">
         </header>
 
@@ -25,17 +25,20 @@
         <section class="profile-content">
              <h1>Glerik</h1>
              <div class="links-grid">
-                <a href="https://discordapp.com/users/298482431725338624" target="_blank" class="link-card">
+                <a href="https://discordapp.com/users/428067961220366340" target="_blank" class="link-card">
                     <i class="fab fa-discord"></i><span>My Discord</span>
                 </a>
-                <a href="https://steamcommunity.com/id/glerik" target="_blank" class="link-card">
+                <a href="https://steamcommunity.com/id/RGGlerik" target="_blank" class="link-card">
                     <i class="fab fa-steam"></i><span>Steam</span>
                 </a>
                 <a href="https://www.twitch.tv/glerik" target="_blank" class="link-card">
                     <i class="fab fa-twitch"></i><span>Twitch</span>
                 </a>
-                 <a href="https://t.me/glerik" target="_blank" class="link-card">
-                    <i class="fab fa-telegram"></i><span>Glerik#2398</span>
+                 <a href="https://t.me/RG_Glerik" target="_blank" class="link-card">
+                    <i class="fab fa-telegram"></i><span>TG лс</span>
+                </a>
+                <a href="https://t.me/RG_Glerik" target="_blank" class="link-card">
+                    <i class="fab fa-telegram"></i><span>Мой ТГК</span>
                 </a>
                 <a href="#" target="_blank" class="link-card">
                     <i class="fa-solid fa-gamepad"></i><span>RG Glerik#RaGe</span>
