--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <!-- Фоновое изображение для баннера задается в CSS -->
             </div>
             <!-- Аватар, который "висит" поверх баннера -->
-            <img src="avatar.jpg" alt="Аватар" class="profile-avatar">
+            <img src="ProfileImage/avatar.jpg" alt="Аватар" class="profile-avatar">
         </header>
 
         <!-- ===== СЕКЦИЯ ПРОФИЛЯ (Имя и ссылки) ===== -->
@@ -40,8 +40,9 @@
                 <a href="https://t.me/RG_Glerik" target="_blank" class="link-card">
                     <i class="fab fa-telegram"></i><span>Мой ТГК</span>
                 </a>
-                <a href="#" target="_blank" class="link-card">
-                    <i class="fa-solid fa-gamepad"></i><span>RG Glerik#RaGe</span>
+                <a href="https://tracker.gg/valorant/profile/riot/RG%20Glerik%23RaGe" target="_blank" class="link-card"> <!-- Вставьте сюда ссылку на ваш профиль Valorant -->
+                    <img src="LinkCard/valorant.svg" class="link-card-icon valorant-icon" alt="Valorant Icon"> <!-- Используем <img> вместо <i> -->
+                    <span>RG Glerik#RaGe</span> <!-- Укажите ваш ник -->
                 </a>
             </div>
         </section>
@@ -70,14 +71,14 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><div class="table-cell-with-avatar"><img src="https://i.pravatar.cc/32?u=faby_morel" alt="avatar" class="table-avatar"><span>Faby_morel</span></div></td>
+                            <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/1284b338-d85e-4214-8c09-a711651b1354-profile_image-70x70.png" alt="avatar" class="table-avatar"><span>Faby_morel</span></div></td>
                             <td>460+</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>17/04/2025 →</td>
                             <td><span class="tag tag-active">Active</span></td>
                         </tr>
                         <tr>
-                            <td><div class="table-cell-with-avatar"><img src="https://i.pravatar.cc/32?u=hamilthone" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
+                            <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/2e1f4e5b-9a87-40d5-91d8-24655d8ea2a8-profile_image-150x150.png" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
                             <td>7800+</td>
                             <td><span class="tag tag-admin">Administrator</span></td>
                             <td>11/02/2024 →</td>
