--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <td><span class="tag tag-active">Active</span></td>
                         </tr>
                         <tr>
-                           <td><div class="table-cell-with-avatar"><img src="https://i.pravatar.cc/32?u=mattrahersha" alt="avatar" class="table-avatar"><span>Mattrahersha</span></div></td>
+                           <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/92472019-995a-410a-a952-c9a05f91c818-profile_image-70x70.png" alt="avatar" class="table-avatar"><span>Mattrahersha</span></div></td>
                             <td>200+</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>03/03/2025 → 18/06/2025</td>
@@ -113,7 +113,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><div class="table-cell-with-avatar"><img src="https://i.pravatar.cc/32?u=hamilthone_telegram" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
+                            <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/2e1f4e5b-9a87-40d5-91d8-24655d8ea2a8-profile_image-150x150.png" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
                             <td>30000+</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>13/09/2023 →</td>
@@ -141,21 +141,21 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><div class="table-cell-with-avatar"><img src="https://i.pravatar.cc/32?u=hamilthone_discord" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
+                            <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/2e1f4e5b-9a87-40d5-91d8-24655d8ea2a8-profile_image-150x150.png" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
                             <td>400+</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>13/09/2023 →</td>
                             <td><span class="tag tag-active">Active</span></td>
                         </tr>
-                        <tr>
+                        <!--<tr>
                             <td><div class="table-cell-with-avatar"><img src="https://i.pravatar.cc/32?u=houseofmemory" alt="avatar" class="table-avatar"><span>House of Memory</span></div></td>
                             <td>100+</td>
                             <td><span class="tag tag-owner">Owner</span></td>
                             <td>28/06/2020 →</td>
                             <td><span class="tag tag-active">Active</span></td>
-                        </tr>
+                        </tr>-->
                         <tr>
-                             <td><div class="table-cell-with-avatar"><img src="https://i.pravatar.cc/32?u=rus_server" alt="avatar" class="table-avatar"><span>RUS Server</span></div></td>
+                             <td><div class="table-cell-with-avatar"><img src="" alt="avatar" class="table-avatar"><span>RUS Server</span></div></td>
                             <td>500+</td>
                             <td><span class="tag tag-admin">Administrator</span></td>
                             <td>18/09/2018 → 26/11/2020</td>
