--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                     <i class="fab fa-twitch"></i><span>Twitch</span>
                 </a>
                  <a href="https://t.me/RG_Glerik" target="_blank" class="link-card">
-                    <i class="fab fa-telegram"></i><span>TG лс</span>
+                    <i class="fab fa-telegram"></i><span>TG Dm</span>
                 </a>
-                <a href="https://t.me/RG_Glerik" target="_blank" class="link-card">
-                    <i class="fab fa-telegram"></i><span>Мой ТГК</span>
+                <a href="https://t.me/LifeGlerik" target="_blank" class="link-card">
+                    <i class="fab fa-telegram"></i><span>My TG Channel</span>
                 </a>
                 <a href="https://tracker.gg/valorant/profile/riot/RG%20Glerik%23RaGe" target="_blank" class="link-card"> <!-- Вставьте сюда ссылку на ваш профиль Valorant -->
                     <img src="LinkCard/valorant.svg" class="link-card-icon valorant-icon" alt="Valorant Icon"> <!-- Используем <img> вместо <i> -->
