--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <i class="fab fa-twitch"></i><span>Twitch</span>
                 </a>
                  <a href="https://t.me/RG_Glerik" target="_blank" class="link-card">
-                    <i class="fab fa-telegram"></i><span>TG Dm</span>
+                    <i class="fab fa-telegram"></i><span>TG DM</span>
                 </a>
                 <a href="https://t.me/LifeGlerik" target="_blank" class="link-card">
                     <i class="fab fa-telegram"></i><span>My TG Channel</span>
@@ -72,21 +72,21 @@
                     <tbody>
                         <tr>
                             <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/1284b338-d85e-4214-8c09-a711651b1354-profile_image-70x70.png" alt="avatar" class="table-avatar"><span>Faby_morel</span></div></td>
-                            <td>460+</td>
+                            <td>496</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>17/04/2025 →</td>
                             <td><span class="tag tag-active">Active</span></td>
                         </tr>
                         <tr>
                             <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/2e1f4e5b-9a87-40d5-91d8-24655d8ea2a8-profile_image-150x150.png" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
-                            <td>7800+</td>
+                            <td>8100</td>
                             <td><span class="tag tag-admin">Administrator</span></td>
                             <td>11/02/2024 →</td>
                             <td><span class="tag tag-active">Active</span></td>
                         </tr>
                         <tr>
                            <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/92472019-995a-410a-a952-c9a05f91c818-profile_image-70x70.png" alt="avatar" class="table-avatar"><span>Mattrahersha</span></div></td>
-                            <td>200+</td>
+                            <td>200</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>03/03/2025 → 18/06/2025</td>
                             <td><span class="tag tag-closed">Closed</span></td>
@@ -114,7 +114,7 @@
                     <tbody>
                         <tr>
                             <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/2e1f4e5b-9a87-40d5-91d8-24655d8ea2a8-profile_image-150x150.png" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
-                            <td>30000+</td>
+                            <td>30000</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>13/09/2023 →</td>
                             <td><span class="tag tag-active">Active</span></td>
@@ -142,21 +142,28 @@
                     <tbody>
                         <tr>
                             <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/2e1f4e5b-9a87-40d5-91d8-24655d8ea2a8-profile_image-150x150.png" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
-                            <td>400+</td>
+                            <td>400</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>13/09/2023 →</td>
                             <td><span class="tag tag-active">Active</span></td>
                         </tr>
+                        <tr>
+                            <td><div class="table-cell-with-avatar"><img src="" alt="avatar" class="table-avatar"><span>Reltor Server</span></div></td>
+                            <td>100</td>
+                            <td><span class="tag tag-moderator">Moderator</span></td>
+                            <td>20/10/2020 → 20/08/2021</td>
+                            <td><span class="tag tag-active">Active</span></td>
+                        </tr>
                         <!--<tr>
                             <td><div class="table-cell-with-avatar"><img src="https://i.pravatar.cc/32?u=houseofmemory" alt="avatar" class="table-avatar"><span>House of Memory</span></div></td>
-                            <td>100+</td>
+                            <td>100</td>
                             <td><span class="tag tag-owner">Owner</span></td>
                             <td>28/06/2020 →</td>
                             <td><span class="tag tag-active">Active</span></td>
                         </tr>-->
                         <tr>
                              <td><div class="table-cell-with-avatar"><img src="" alt="avatar" class="table-avatar"><span>RUS Server</span></div></td>
-                            <td>500+</td>
+                            <td>500</td>
                             <td><span class="tag tag-admin">Administrator</span></td>
                             <td>18/09/2018 → 26/11/2020</td>
                             <td><span class="tag tag-closed">Closed</span></td>
