--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/2e1f4e5b-9a87-40d5-91d8-24655d8ea2a8-profile_image-150x150.png" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
+                            <td><div class="table-cell-with-avatar"><img src="https://glerik.notion.site/image/https%3A%2F%2Fcdn.discordapp.com%2Ficons%2F1147741446800166982%2Fa823302adc0ba0eab2cddf6476bbe009.webp%3Fsize%3D1024%26format%3Dwebp%26width%3D0%26height%3D256?table=block&id=8b471a57-f5b5-43a3-b793-d816d9c7838f&spaceId=aabc614a-b225-4edb-9d49-0e241b01313c&width=60&userId=&cache=v2" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
                             <td>400</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>13/09/2023 →</td>
@@ -152,7 +152,28 @@
                             <td>100</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>20/10/2020 → 20/08/2021</td>
-                            <td><span class="tag tag-active">Active</span></td>
+                            <td><span class="tag tag-closed">Active</span></td>
+                        </tr>
+                        <tr>
+                            <td><div class="table-cell-with-avatar"><img src="https://glerik.notion.site/image/https%3A%2F%2Fcdn.discordapp.com%2Ficons%2F868839759513010236%2Fe8d974ad0c7c2ee0d520120e7cd7f479.webp%3Fsize%3D1024%26format%3Dwebp%26width%3D0%26height%3D256?table=block&id=aa96c945-1292-4a27-892c-28b420a233be&spaceId=aabc614a-b225-4edb-9d49-0e241b01313c&width=60&userId=&cache=v2" alt="avatar" class="table-avatar"><span>STARCLUB</span></div></td>
+                            <td>200</td>
+                            <td><span class="tag tag-moderator">Moderator</span></td>
+                            <td>15/10/2022 → 24/06/2023</td>
+                            <td><span class="tag tag-closed">Active</span></td>
+                        </tr>
+                        <tr>
+                            <td><div class="table-cell-with-avatar"><img src="https://glerik.notion.site/image/https%3A%2F%2Fcdn.discordapp.com%2Ficons%2F718459818175627346%2F3d480715ae7970ef95f502e8f6f98098.webp%3Fsize%3D1024%26format%3Dwebp%26width%3D0%26height%3D256?table=block&id=7c9b0b1d-5553-4cfa-bb9f-87d671ed7d7c&spaceId=aabc614a-b225-4edb-9d49-0e241b01313c&width=60&userId=&cache=v2" alt="avatar" class="table-avatar"><span>[RUS] Terra Incognita</span></div></td>
+                            <td>200</td>
+                            <td><span class="tag tag-owner">Owner</span></td>
+                            <td>05/06/2020 → 07/09/2021</td>
+                            <td><span class="tag tag-closed">Closed</span></td>
+                        </tr>
+                        <tr>
+                            <td><div class="table-cell-with-avatar"><img src="https://glerik.notion.site/image/https%3A%2F%2Fcdn.discordapp.com%2Ficons%2F732344217636044921%2F49eb835e5552e091ac60b6c776b1b096.webp%3Fsize%3D512?table=block&id=9ace9f07-3564-4351-ad11-b1a9b68d0bb5&spaceId=aabc614a-b225-4edb-9d49-0e241b01313c&width=60&userId=&cache=v2" alt="avatar" class="table-avatar"><span>[CIS] Cat RP</span></div></td>
+                            <td>200</td>
+                            <td><span class="tag tag-owner">Owner</span></td>
+                            <td>14/09/2020 → 20/09/2022</td>
+                            <td><span class="tag tag-closed">Closed</span></td>
                         </tr>
                         <!--<tr>
                             <td><div class="table-cell-with-avatar"><img src="https://i.pravatar.cc/32?u=houseofmemory" alt="avatar" class="table-avatar"><span>House of Memory</span></div></td>
