--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="https://steamcommunity.com/id/RGGlerik" target="_blank" class="link-card">
                     <i class="fab fa-steam"></i><span>Steam</span>
                 </a>
-                <a href="https://www.twitch.tv/glerik" target="_blank" class="link-card">
+                <a href="https://www.twitch.tv/glerik_" target="_blank" class="link-card">
                     <i class="fab fa-twitch"></i><span>Twitch</span>
                 </a>
                  <a href="https://t.me/RG_Glerik" target="_blank" class="link-card">
