--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <a href="https://t.me/LifeGlerik" target="_blank" class="link-card">
                     <i class="fab fa-telegram"></i><span>My TG Channel</span>
                 </a>
-                <a href="https://tracker.gg/valorant/profile/riot/RG%20Glerik%23RaGe" target="_blank" class="link-card"> <!-- Вставьте сюда ссылку на ваш профиль Valorant -->
-                    <img src="LinkCard/valorant.svg" class="link-card-icon valorant-icon" alt="Valorant Icon"> <!-- Используем <img> вместо <i> -->
-                    <span>RG Glerik#RaGe</span> <!-- Укажите ваш ник -->
+                <a href="https://tracker.gg/valorant/profile/riot/RG%20Glerik%23RaGe" target="_blank" class="link-card">
+                    <img src="LinkCard/valorant.svg" class="link-card-icon valorant-icon" alt="Valorant Icon">
+                    <span>RG Glerik#RaGe</span>
                 </a>
             </div>
         </section>
@@ -50,8 +50,6 @@
         <!-- ===== ОСНОВНОЙ КОНТЕНТ (Таблицы) ===== -->
         <main class="content-wrapper">
             <h2>Development and administration</h2>
-
-            <!-- Все ваши таблицы остаются здесь без изменений -->
             
             <!-- БЛОК TWITCH -->
             <div class="content-card">
