--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
                             <td>100</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>20/10/2020 → 20/08/2021</td>
-                            <td><span class="tag tag-closed">Active</span></td>
+                            <td><span class="tag tag-closed">Closed</span></td>
                         </tr>
                         <tr>
                             <td><div class="table-cell-with-avatar"><img src="https://glerik.notion.site/image/https%3A%2F%2Fcdn.discordapp.com%2Ficons%2F868839759513010236%2Fe8d974ad0c7c2ee0d520120e7cd7f479.webp%3Fsize%3D1024%26format%3Dwebp%26width%3D0%26height%3D256?table=block&id=aa96c945-1292-4a27-892c-28b420a233be&spaceId=aabc614a-b225-4edb-9d49-0e241b01313c&width=60&userId=&cache=v2" alt="avatar" class="table-avatar"><span>STARCLUB</span></div></td>
                             <td>200</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>15/10/2022 → 24/06/2023</td>
-                            <td><span class="tag tag-closed">Active</span></td>
+                            <td><span class="tag tag-closed">Closed</span></td>
                         </tr>
                         <tr>
                             <td><div class="table-cell-with-avatar"><img src="https://glerik.notion.site/image/https%3A%2F%2Fcdn.discordapp.com%2Ficons%2F718459818175627346%2F3d480715ae7970ef95f502e8f6f98098.webp%3Fsize%3D1024%26format%3Dwebp%26width%3D0%26height%3D256?table=block&id=7c9b0b1d-5553-4cfa-bb9f-87d671ed7d7c&spaceId=aabc614a-b225-4edb-9d49-0e241b01313c&width=60&userId=&cache=v2" alt="avatar" class="table-avatar"><span>[RUS] Terra Incognita</span></div></td>
