--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/c71cd09d-1748-48eb-956b-e23719d3a056-profile_image-150x150.png" alt="avatar" class="table-avatar"><span>Yamahaaa_</span></div></td>
+                            <td>857</td>
+                            <td><span class="tag tag-moderator">Moderator</span></td>
+                            <td>01/09/2025 →</td>
+                            <td><span class="tag tag-active">Active</span></td>
+                        </tr>
+                        <tr>
                             <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/1284b338-d85e-4214-8c09-a711651b1354-profile_image-70x70.png" alt="avatar" class="table-avatar"><span>Faby_morel</span></div></td>
                             <td>496</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
