update status Hamilthone

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <tr>
                             <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/2e1f4e5b-9a87-40d5-91d8-24655d8ea2a8-profile_image-150x150.png" alt="avatar" class="table-avatar"><span>Hamilthone</span></div></td>
                             <td>30000</td>
-                            <td><span class="tag tag-moderator">Moderator</span></td>
+                            <td><span class="tag tag-admin">Administrator</span></td>
                             <td>13/09/2023 →</td>
                             <td><span class="tag tag-active">Active</span></td>
                         </tr>
