--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
                             <td>01/09/2025 →</td>
                             <td><span class="tag tag-active">Active</span></td>
                         </tr>
+
+                        <tr>
+                            <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/e2c89bcc-0c4d-410b-a0ab-9edbe5577886-profile_image-300x300.png" alt="avatar" class="table-avatar"><span>Am0o__</span></div></td>
+                            <td>13</td>
+                            <td><span class="tag tag-moderator">Moderator</span></td>
+                            <td>10/10/2025 →</td>
+                            <td><span class="tag tag-active">Active</span></td>
+                        </tr>
+
                         <tr>
                             <td><div class="table-cell-with-avatar"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/1284b338-d85e-4214-8c09-a711651b1354-profile_image-70x70.png" alt="avatar" class="table-avatar"><span>Faby_morel</span></div></td>
                             <td>496</td>
