Add animated statistics section and translate various tooltips to English.

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div class="main-container">
 
         <!-- Theme Toggle -->
-        <button class="theme-toggle" id="theme-toggle" aria-label="Switch theme" data-tooltip="Сменить тему"
+        <button class="theme-toggle" id="theme-toggle" aria-label="Switch theme" data-tooltip="Switch theme"
             data-tooltip-position="bottom">
             <i class="fa-solid fa-moon"></i>
         </button>
@@ -199,34 +199,34 @@
             <!-- Links Grid -->
             <nav class="links-grid" id="social-links" aria-label="Social media links">
                 <a href="https://discordapp.com/users/428067961220366340" target="_blank" rel="noopener noreferrer"
-                    class="link-card" id="link-discord" data-tooltip="Открыть профиль Discord"
+                    class="link-card" id="link-discord" data-tooltip="Open Discord profile"
                     aria-label="Discord Profile">
                     <i class="fab fa-discord" aria-hidden="true"></i>
                     <span>My Discord</span>
                 </a>
                 <a href="https://steamcommunity.com/id/RGGlerik" target="_blank" rel="noopener noreferrer"
-                    class="link-card" id="link-steam" data-tooltip="Открыть профиль Steam" aria-label="Steam Profile">
+                    class="link-card" id="link-steam" data-tooltip="Open Steam profile" aria-label="Steam Profile">
                     <i class="fab fa-steam" aria-hidden="true"></i>
                     <span>Steam</span>
                 </a>
                 <a href="https://www.twitch.tv/glerik_" target="_blank" rel="noopener noreferrer" class="link-card"
-                    id="link-twitch" data-tooltip="Открыть канал Twitch" aria-label="Twitch Channel">
+                    id="link-twitch" data-tooltip="Open Twitch channel" aria-label="Twitch Channel">
                     <i class="fab fa-twitch" aria-hidden="true"></i>
                     <span>Twitch</span>
                 </a>
                 <a href="https://t.me/RG_Glerik" target="_blank" rel="noopener noreferrer" class="link-card"
-                    id="link-telegram-dm" data-tooltip="Написать в Telegram" aria-label="Telegram Direct Message">
+                    id="link-telegram-dm" data-tooltip="Message on Telegram" aria-label="Telegram Direct Message">
                     <i class="fab fa-telegram" aria-hidden="true"></i>
                     <span>TG DM</span>
                 </a>
                 <a href="https://t.me/LifeGlerik" target="_blank" rel="noopener noreferrer" class="link-card"
-                    id="link-telegram-channel" data-tooltip="Открыть Telegram канал" aria-label="Telegram Channel">
+                    id="link-telegram-channel" data-tooltip="Open Telegram channel" aria-label="Telegram Channel">
                     <i class="fab fa-telegram" aria-hidden="true"></i>
                     <span>My TG Channel</span>
                 </a>
                 <a href="https://tracker.gg/valorant/profile/riot/RG%20Glerik%23RaGe" target="_blank"
-                    rel="noopener noreferrer" class="link-card" id="link-valorant"
-                    data-tooltip="Открыть Valorant Tracker" aria-label="Valorant Tracker Profile">
+                    rel="noopener noreferrer" class="link-card" id="link-valorant" data-tooltip="Open Valorant Tracker"
+                    aria-label="Valorant Tracker Profile">
                     <img src="LinkCard/valorant.svg" class="link-card-icon valorant-icon" alt="" aria-hidden="true"
                         width="32" height="32">
                     <span>RG Glerik#RaGe</span>
@@ -253,11 +253,11 @@
                 <table id="twitchTable" class="display full-width-table" aria-label="Twitch streamers table">
                     <thead>
                         <tr>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Streamer</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Followers</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Position</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Date</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Status</th>
+                            <th scope="col" data-tooltip="Click to sort">Streamer</th>
+                            <th scope="col" data-tooltip="Click to sort">Followers</th>
+                            <th scope="col" data-tooltip="Click to sort">Position</th>
+                            <th scope="col" data-tooltip="Click to sort">Date</th>
+                            <th scope="col" data-tooltip="Click to sort">Status</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -276,11 +276,11 @@
                 <table id="telegramTable" class="display full-width-table" aria-label="Telegram channels table">
                     <thead>
                         <tr>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Server</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Members</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Position</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Date</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Status</th>
+                            <th scope="col" data-tooltip="Click to sort">Server</th>
+                            <th scope="col" data-tooltip="Click to sort">Members</th>
+                            <th scope="col" data-tooltip="Click to sort">Position</th>
+                            <th scope="col" data-tooltip="Click to sort">Date</th>
+                            <th scope="col" data-tooltip="Click to sort">Status</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -299,11 +299,11 @@
                 <table id="discordTable" class="display full-width-table" aria-label="Discord servers table">
                     <thead>
                         <tr>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Server</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Members</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Position</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Date</th>
-                            <th scope="col" data-tooltip="Нажмите для сортировки">Status</th>
+                            <th scope="col" data-tooltip="Click to sort">Server</th>
+                            <th scope="col" data-tooltip="Click to sort">Members</th>
+                            <th scope="col" data-tooltip="Click to sort">Position</th>
+                            <th scope="col" data-tooltip="Click to sort">Date</th>
+                            <th scope="col" data-tooltip="Click to sort">Status</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -322,11 +322,11 @@
                 <div class="skill-item">
                     <span class="skill-title">Skills:</span>
                     <span class="skill-value">
-                        <span class="skill-color-green" data-tooltip="Уверенный уровень">Embeds</span>,
-                        <span class="skill-color-green" data-tooltip="Уверенный уровень">server setup</span>,
-                        <span class="skill-color-green" data-tooltip="Уверенный уровень">server administration</span>,
-                        <span class="skill-color-purple" data-tooltip="Продвинутый уровень">server creating</span>,
-                        <span class="skill-color-red" data-tooltip="Экспертный уровень">server design</span>,
+                        <span class="skill-color-green" data-tooltip="Confident level">Embeds</span>,
+                        <span class="skill-color-green" data-tooltip="Confident level">server setup</span>,
+                        <span class="skill-color-green" data-tooltip="Confident level">server administration</span>,
+                        <span class="skill-color-purple" data-tooltip="Advanced level">server creating</span>,
+                        <span class="skill-color-red" data-tooltip="Expert level">server design</span>,
                         <span>extensive experience in moderation.</span>
                     </span>
                 </div>
@@ -342,8 +342,9 @@
                         <div class="timeline-content">
                             <span class="timeline-date">2018</span>
                             <h4 class="timeline-title"><i class="fab fa-discord timeline-icon"></i> Joined Discord</h4>
-                            <p class="timeline-description">Начало пути в Discord сообществе. Первые шаги в модерации и
-                                администрировании.</p>
+                            <p class="timeline-description">Started my journey in the Discord community. First steps in
+                                moderation and
+                                administration.</p>
                         </div>
                     </div>
                     <div class="timeline-item">
@@ -351,7 +352,7 @@
                             <span class="timeline-date">2020</span>
                             <h4 class="timeline-title"><i class="fa-solid fa-crown timeline-icon"></i> First Server
                                 Owner</h4>
-                            <p class="timeline-description">Создание и управление собственными серверами: Terra
+                            <p class="timeline-description">Creating and managing my own servers: Terra
                                 Incognita, Cat RP.</p>
                         </div>
                     </div>
@@ -359,8 +360,8 @@
                         <div class="timeline-content">
                             <span class="timeline-date">2023</span>
                             <h4 class="timeline-title"><i class="fab fa-telegram timeline-icon"></i> Telegram Admin</h4>
-                            <p class="timeline-description">Расширение на платформу Telegram. Администрирование каналов
-                                с 30K+ подписчиков.</p>
+                            <p class="timeline-description">Expanded to the Telegram platform. Administrating channels
+                                with 30K+ subscribers.</p>
                         </div>
                     </div>
                     <div class="timeline-item">
@@ -368,8 +369,8 @@
                             <span class="timeline-date">2024</span>
                             <h4 class="timeline-title"><i class="fab fa-twitch timeline-icon"></i> Twitch Moderation
                             </h4>
-                            <p class="timeline-description">Активная работа с Twitch стримерами. Модерация и
-                                администрирование каналов.</p>
+                            <p class="timeline-description">Active work with Twitch streamers. Moderation and
+                                administration of channels.</p>
                         </div>
                     </div>
                     <div class="timeline-item">
@@ -377,8 +378,8 @@
                             <span class="timeline-date">Now</span>
                             <h4 class="timeline-title"><i class="fa-solid fa-rocket timeline-icon"></i> Current Projects
                             </h4>
-                            <p class="timeline-description">Продолжаю развиваться в сфере community management. Открыт
-                                для новых предложений.</p>
+                            <p class="timeline-description">Continuing to grow in community management. Open
+                                for new opportunities.</p>
                         </div>
                     </div>
                 </div>
@@ -388,7 +389,7 @@
     </div>
 
     <!-- Keyboard Shortcuts Hint -->
-    <div class="shortcuts-hint" id="shortcuts-hint" data-tooltip="Нажмите ? для справки">
+    <div class="shortcuts-hint" id="shortcuts-hint" data-tooltip="Press ? for help">
         <i class="fa-solid fa-keyboard"></i>
     </div>
 
