Add cache busting parameters to CSS and JS asset links.

--- a/index.html
+++ b/index.html
@@ -145,20 +145,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Modular CSS -->
-    <link rel="stylesheet" href="css/variables.css">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/components.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/preloader.css">
-    <link rel="stylesheet" href="css/toast.css">
-    <link rel="stylesheet" href="css/tooltip.css">
-    <link rel="stylesheet" href="css/filter.css">
-    <link rel="stylesheet" href="css/stats.css">
-    <link rel="stylesheet" href="css/modal.css">
-    <link rel="stylesheet" href="css/scroll.css">
-    <link rel="stylesheet" href="css/particles.css">
-    <link rel="stylesheet" href="css/timeline.css">
+    <link rel="stylesheet" href="css/variables.css?v=2.0">
+    <link rel="stylesheet" href="css/base.css?v=2.0">
+    <link rel="stylesheet" href="css/layout.css?v=2.0">
+    <link rel="stylesheet" href="css/components.css?v=2.0">
+    <link rel="stylesheet" href="css/animations.css?v=2.0">
+    <link rel="stylesheet" href="css/preloader.css?v=2.0">
+    <link rel="stylesheet" href="css/toast.css?v=2.0">
+    <link rel="stylesheet" href="css/tooltip.css?v=2.0">
+    <link rel="stylesheet" href="css/filter.css?v=2.0">
+    <link rel="stylesheet" href="css/stats.css?v=2.0">
+    <link rel="stylesheet" href="css/modal.css?v=2.0">
+    <link rel="stylesheet" href="css/scroll.css?v=2.0">
+    <link rel="stylesheet" href="css/particles.css?v=2.0">
+    <link rel="stylesheet" href="css/timeline.css?v=2.0">
 </head>
 
 <body>
@@ -394,7 +394,7 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/main.js?v=2.0"></script>
 
     <!-- Service Worker Registration -->
     <script>
