Telegram SEO Meta Tags

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
     <meta name="twitter:description" content="Portfolio showcasing community management experience.">
     <meta name="twitter:image" content="https://glerik23.github.io/ProfileImage/avatar.jpg">
 
+    <!-- Telegram Card -->
+    <meta name="telegram:card" content="summary">
+    <meta name="telegram:url" content="https://glerik23.github.io/">
+    <meta name="telegram:title" content="Glerik - Development and Administration">
+    <meta name="telegram:description" content="Portfolio showcasing community management experience.">
+    <meta name="telegram:image" content="https://glerik23.github.io/ProfileImage/avatar.jpg">
+
     <!-- Canonical URL -->
     <link rel="canonical" href="https://glerik23.github.io/">
 
