--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
         </div>
     </div>
 
+    <!-- Development Banner - Remove .dev-banner--hidden class to show -->
+    <div class="dev-banner" id="dev-banner" role="alert">
+        <div class="dev-banner__content">
+            <i class="fas fa-code" aria-hidden="true"></i>
+            <span class="dev-banner__text">Under Development</span>
+            <i class="fas fa-wrench" aria-hidden="true"></i>
+        </div>
+        <button class="dev-banner__close" id="dev-banner-close" aria-label="Dismiss banner">
+            <i class="fas fa-times" aria-hidden="true"></i>
+        </button>
+    </div>
+
     <div class="main-container">
 
         <!-- Theme Toggle -->
