--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </div>
 
     <!-- Development Banner - Remove .dev-banner--hidden class to show -->
-    <div class="dev-banner" id="dev-banner" role="alert">
+    <div class="dev-banner" id="dev-banner" role="alert"> <!-- "dev-banner dev-banner--hidden" -->
         <div class="dev-banner__content">
             <i class="fas fa-code" aria-hidden="true"></i>
             <span class="dev-banner__text">Under Development</span>
